# fingerprint-extension

./: AUTHORS.md  Makefile.am  README.md  autogen.sh  configure.ac  fingerprint.pc.in
build-aux/: cpp-wrap  cppwrap  js2c.sh  jsmin  rpc-wrap  rpc-wrap.py  verbose.mk
common/: Makefile.am  picojson.h
fingerprint/: 40-libfprint0.rules  Makefile.am  api.js  extension.cc  extension.h  extension.hh  instance.cc  instance.h  instance.hh  spec.json
lib/: fingerprint.c  fingerprint.js
m4/: docs.m4  programs.m4
packaging/: fingerprint.spec
src/: Makefile.am  fingerprint.xml.in  index.html
src/js/: main.js  newmain.js
tests/: Makefile.am  atlocal.in  crosswalk.js  javascript.at  library.at  node_modules.tar.xz  package.json.in  package.m4.in  testsuite.at
tests/test/: api.js
